--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,25 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.btn {
+  &.btn-link {
+    &.btn-delete {
+      margin-top: -2px;
+      padding: 0 7px 1px;
+      color: saturate(theme-color("danger"), 30%);
+    }
+  }
+
+  &.btn-plain {
+    &:hover, &:focus {
+      color: theme-color("primary");
+      border: 1px solid lighten(theme-color("primary"), 30%);
+      background-color: transparent !important;
+    }
+  }
+}
+
+.inline {
+  display: inline;
+}
