--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,3 +34,30 @@
 .inline {
   display: inline;
 }
+
+.tooltip-inner {
+  &.tooltip-inner-html {
+    max-width: 350px !important;
+    padding: 0.25rem 0.5rem;
+    color: #fff;
+    text-align: center;
+    background-color: #000;
+    border-radius: 0.25rem;
+  }
+}
+
+.tooltip {
+  &.tooltip-white {
+    > .arrow {
+      &:before {
+        border-top-color: darken($white, 30%) !important;
+        border-bottom-color: darken($white, 30%) !important;
+      }
+    }
+
+    > .tooltip-inner {
+      background-color: $white !important;
+      border: 1px solid darken($white, 30%);
+    }
+  }
+}
